fix: fix aos overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,7 +63,7 @@
   * {
     @apply border-border;
   }
-  html, body {
+  body {
     @apply bg-background text-foreground;
     overflow-x: hidden;
     margin: 0;
